css/flight.css
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
    display: block;
}


audio,
canvas,
video {
    display: inline-block;
}


audio:not([controls]) {
    display: none;
    height: 0;
}


[hidden],
template {
    display: none;
}


html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    height: 100%;
}


body {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    position: relative;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 150px;
    grid-column-gap: 0;
    grid-row-gap: 0;

    background-color: #313131;
    color: #c0c0c0;
    overflow: hidden;
}


a {
    background: transparent;
}


a:focus {
    outline: thin dotted;
}


a:active,
a:hover {
    outline: 0;
}


abbr[title] {
    border-bottom: 1px dotted;
}


b,
strong {
    font-weight: bold;
}


hr {
    box-sizing: content-box;
    height: 0;
}


img {
    border: 0;
}


svg:not(:root) {
    overflow: hidden;
}


figure {
    margin: 0;
}


#flight-map {
    margin: 0;
    padding: 0;
    border: none;
    width: 100%;
    height: 100%;
}


#cameras {
    width: 100%; /*Sidebar*/
    height: 150px;
    list-style: none;
    margin: 0;
    padding: 5px 0;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#cameras li {
    display: block;
    margin: 0;
    padding: 0 5px;
    width: 100%;
    height: 100%;
}

#cameras li img {
    display: block;
    margin: 0 auto;
    width: auto;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    border-radius: 10px;
    aspect-ratio: initial;
    /*transition: all 0.5s ease;*/
}

#cameras li img.big {
    z-index: 20;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80vw;
    aspect-ratio: 16 / 9;
    height: auto;

}

#overlay {
    z-index: 10;
    position: absolute;
    top: 0;
    left: 0;
    width: 100dvw;
    height: 100dvh;
    display: none;
    background-color: rgba(0, 0, 0, 0.8);

}

body:has(#cameras li img.big) > #overlay {
    display: block;
}



#liveATCAudio {
    display: block;
    width: 100%;
    height: auto;
    min-height: 50px;
}

